# 3d_process

chapter1/: chapter_assignment_note.md  modelnet40.ipynb  open3d_play.ipynb  pointnet.ipynb  svd.ipynb  test_open3d.ipynb
chapter1/assignment1/: modelnet40.ipynb  pca_plot.py
chapter1/bruceSz_chapter1/: downsample_voxel.py  normal_estimation.py
chapter2/knn_code/: #utils.py#
chapter2/knn_code/assignment/: CMakeLists.txt  README.md  a.out  benchmark.py  bruce_force.py  kdtree.py  octree.cc  octree.py  result_set.py
chapter2/knn_code/eigen_examples/: CMakeLists.txt  README.md  mat_and_vec.cc  mat_op.cc
chapter2/lesson2code/: input_visual.ipynb
chapter3/assignment/: GMM.py  KMeans.py  README.md  common.py  compare_cluster.py  spectral_cls.py
chapter4/assign4/: Untitled.ipynb  assign4_example.py  utils.py
chapter5/assignment5/framework/: dataset.py  model.py  train.py
chapter6/assignment/: evaluate_object_3d_offline  gen_sim_det.py
chapter6/assignment/results/: result_ha004542.txt  result_ha004547.txt  result_ha004548.txt  result_ha004549.txt  result_ha004551.txt  (+1501 more)
chapter7/assignment7/: Untitled.ipynb  iss.py  iss_basic.py
chapter8/assignment8/: fpfh.py  shot.py
chapter9/assignment9/: common.py  evaluate_rt.py  fpfh.py  icp.py  iss.py  main_logic.py  reg_result_0403.txt
final_project/assignment_final/: augment.py  clustering.py  dataset.py  generate_training_set.py  kitti_dataset.py  model.py  model40_dataset.py  model40_train.py  object_detect.py  pointnet_plus_model.py  readme.md  test.py  train_pointnet.py  train_pointnetplus.py
(+3788 files in other folders)
